# SDFT-reproduce

./: distil_trainer.py  pyproject.toml
