[project]
name = "self-distillation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.11.0",
    "datasets==4.3.0",
    "deepspeed==0.18.4",
    "matplotlib==3.10.7",
    "numpy==2.2.6",
    "openai==2.6.1",
    "pandas==2.3.3",
    "peft==0.17.1",
    "rich==14.2.0",
    "scipy==1.15.3",
    "torch==2.11.0",
    "tqdm==4.67.1",
    "transformers==4.57.1",
    "trl==0.24.0",
    "vllm",
    "wandb==0.22.2",
]

# DGX Spark: resolve torch and vllm from CUDA 13.0 indices instead of PyPI
[tool.uv.sources]
torch = { index = "pytorch-cu130" }
vllm = { index = "vllm-cu130" }

[tool.uv]
prerelease = "allow"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "vllm-cu130"
url = "https://wheels.vllm.ai/nightly/cu130"
explicit = true
